Added CAV activity.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -138,17 +138,22 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="http://cavconference.org/2017/">29th International Conference on Computer-Aided Verification</a></span>
+          (<abbr>CAV</abbr>&nbsp;’17).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="">37th <abbr>IFIP</abbr> International Conference on Formal Techniques for Distributed Objects, Components and Systems</a></span>
           (<abbr>FORTE</abbr>&nbsp;’17).
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume"><a href="http://fossacs.pps.univ-paris-diderot.fr">20th International Conference on Foundations of Software Science and Computation Structures</a></span>
+          <span class="article-volume"><a href="http://www.etaps.org/index.php/2017/fossacs">20th International Conference on Foundations of Software Science and Computation Structures</a></span>
           (<abbr>FoSSaCS</abbr>&nbsp;’17).
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume"><a href="">9th International Workshop on Exploiting Concurrency Efficiently and Correctly</a></span>
+          <span class="article-volume"><a href="http://ecee.colorado.edu/pavol/ec2-2016/">9th International Workshop on Exploiting Concurrency Efficiently and Correctly</a></span>
           (<abbr>EC<sup>2</sup></abbr>&nbsp;’16).
         </div>
         <div class="item">
