--- a/publications.html
+++ b/publications.html
@@ -45,6 +45,16 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Ahmed Bouajjani, Michael Emmi, Constantin Enea, Burcu Kulahcioglu Ozkan, and Serdar Tasiran.
+            <span class="article-title">
+                Verifying Robustness of Event-Driven Asynchronous Programs against Concurrency.
+            </span>
+            In <span class="article-volume">Proc. 26th European Symposium on Programming</span>
+            (<abbr>ESOP</abbr>&nbsp;’17), <abbr>LNCS</abbr>.
+            Springer, 2017.
+            
+          </li>
+          <li class="item">
             Jose Carlos Bacelar Almeida, Manuel Barbosa, Gilles Barthe, François Dupressoir, and Michael Emmi.
             <span class="article-title">
                 <a href="https://www.usenix.org/conference/usenixsecurity16/technical-sessions/presentation/almeida">Verifying Constant-Time Implementations</a>.
