Nokia comes before Bell Labs.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / Bell Labs, Nokia">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / Nokia Bell Labs">
 
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon|IM+Fell+French+Canon+SC' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="css/screen.css">
@@ -17,7 +17,7 @@
       <div class="tagline">Researcher</div>
         <div class="row">
           <div class="column left">
-            <div class="item">Bell Labs, Nokia<br>
+            <div class="item">Nokia Bell Labs<br>
 600 Mountain Ave., 2B-439<br>
 Murray Hill, <abbr>NJ</abbr> 07974<br>
 <abbr>USA</abbr>
@@ -70,7 +70,7 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
     <section id="positions">
       <h2>Employment</h2>
         <div class="item">
-          <span class="article-title">Member of Technical Staff</span>. Bell Labs, Nokia, Murray Hill, NJ, 2016–present.
+          <span class="article-title">Member of Technical Staff</span>. Nokia Bell Labs, Murray Hill, NJ, 2016–present.
         </div>
         <div class="item">
           <span class="article-title">Researcher</span>. <abbr>IMDEA</abbr> Software Institute, Madrid, 2013–2016.
