--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / Bell Labs, Nokia">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / Nokia Bell Labs">
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon|IM+Fell+French+Canon+SC' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="print" href="css/print.css">
@@ -16,7 +16,7 @@
 
         <section id="header">
           <h1 class="title">Michael Emmi</h1>
-          <div class="tagline">Researcher / Bell Labs, Nokia</div>
+          <div class="tagline">Researcher / Nokia Bell Labs</div>
           <div class="item">
               <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
               <span class="tag"><a href="https://github.com/michael-emmi">@GitHub</a></span>
@@ -521,7 +521,7 @@
 
         <section id="contact">
           <h2>Contact</h2>
-            <div class="item">Bell Labs, Nokia<br>
+            <div class="item">Nokia Bell Labs<br>
 600 Mountain Ave., 2B-439<br>
 Murray Hill, <abbr>NJ</abbr> 07974<br>
 <abbr>USA</abbr>
