--- a/cv.html
+++ b/cv.html
@@ -549,39 +549,39 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
           <span><strong>José Bacelar Almeida</strong> (Universidade do Minho)</span>
           <span><strong>Mohamed Faouzi Atig</strong> (Uppsala University)</span>
           <span><strong>Manuel Barbosa</strong> (University of Porto)</span>
-          <span><strong>Gilles Barthe</strong> (IMDEA Software)</span>
+          <span><strong>Gilles Barthe</strong> (<abbr>IMDEA</abbr> Software)</span>
           <span><strong>Ahmed Bouajjani</strong> (Paris 7)</span>
           <span><strong>Montgomery Carter</strong> (University of Utah)</span>
-          <span><strong>Juan Chen</strong> (MSR)</span>
-          <span><strong>Derrick Coetzee</strong> (MSR)</span>
-          <span><strong>Jeremy Condit</strong> (MSR)</span>
-          <span><strong>François Dupressoir</strong> (IMDEA Software)</span>
+          <span><strong>Juan Chen</strong> (<abbr>MSR</abbr>)</span>
+          <span><strong>Derrick Coetzee</strong> (<abbr>MSR</abbr>)</span>
+          <span><strong>Jeremy Condit</strong> (<abbr>MSR</abbr>)</span>
+          <span><strong>François Dupressoir</strong> (<abbr>IMDEA</abbr> Software)</span>
           <span><strong>Constantin Enea</strong> (Paris 7)</span>
-          <span><strong>Petros Faloutsos</strong> (UCLA)</span>
-          <span><strong>Jeffrey S. Fischer</strong> (UCLA)</span>
-          <span><strong>Pierre Ganty</strong> (IMDEA Software)</span>
-          <span><strong>Dimitra Giannakopoulou</strong> (NASA Ames)</span>
+          <span><strong>Petros Faloutsos</strong> (<abbr>UCLA</abbr>)</span>
+          <span><strong>Jeffrey S. Fischer</strong> (<abbr>UCLA</abbr>)</span>
+          <span><strong>Pierre Ganty</strong> (<abbr>IMDEA</abbr> Software)</span>
+          <span><strong>Dimitra Giannakopoulou</strong> (<abbr>NASA</abbr> Ames)</span>
           <span><strong>Jad Hamza</strong> (Paris 7)</span>
           <span><strong>Arvind Haran</strong> (University of Utah)</span>
-          <span><strong>Chris Hawblitzel</strong> (MSR)</span>
+          <span><strong>Chris Hawblitzel</strong> (<abbr>MSR</abbr>)</span>
           <span><strong>Shaobo He</strong> (University of Utah)</span>
-          <span><strong>Ranjit Jhala</strong> (UCSD)</span>
+          <span><strong>Ranjit Jhala</strong> (<abbr>UCSD</abbr>)</span>
           <span><strong>Eddie Kohler</strong> (Harvard)</span>
-          <span><strong>Akash Lal</strong> (MSR)</span>
-          <span><strong>Rupak Majumdar</strong> (MPI-SWS)</span>
-          <span><strong>Roman Manevich</strong> (Ben-Gurion University of the Negev)</span>
+          <span><strong>Akash Lal</strong> (<abbr>MSR</abbr>)</span>
+          <span><strong>Rupak Majumdar</strong> (<abbr>MPI-SWS</abbr>)</span>
+          <span><strong>Roman Manevich</strong> (UCLA)</span>
           <span><strong>Kedar Namjoshi</strong> (Nokia Bell Labs)</span>
           <span><strong>Burcu Kulahcioglu Ozkan</strong> (Koç University)</span>
           <span><strong>Gennaro Parlato</strong> (Paris 7)</span>
-          <span><strong>Corina S. Pasareanu</strong> (NASA Ames)</span>
+          <span><strong>Corina S. Pasareanu</strong> (<abbr>NASA</abbr> Ames)</span>
           <span><strong>Frances Perry</strong> (Princeton University)</span>
           <span><strong>Polyvios Pratikaki</strong> (University of Maryland)</span>
-          <span><strong>Shaz Qadeer</strong> (MSR)</span>
+          <span><strong>Shaz Qadeer</strong> (<abbr>MSR</abbr>)</span>
           <span><strong>Zvonimir Rakamaric</strong> (University of Utah)</span>
           <span><strong>Fernando Rosa-Velardo</strong> (Universidad Complutense de Madrid)</span>
           <span><strong>Koushik Sen</strong> (University of California, Berkeley)</span>
           <span><strong>Serdar Tasiran</strong> (Koç University)</span>
-          <span><strong>Alice Wang</strong> (UCLA)</span>
+          <span><strong>Alice Wang</strong> (<abbr>UCLA</abbr>)</span>
           <span><strong>Jonathan Whitaker</strong> (University of Utah)</span>
         </p>
       </div>
