--- a/cv.html
+++ b/cv.html
@@ -46,12 +46,12 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
         <div class="item">
           <span class="article-title">Ph.D. Computer Science</span>.
           <!-- , advised by Rupak Majumdar. -->
-          UCLA (<abbr>UCLA</abbr>), 2010.
+          University of California, Los Angeles (<abbr>UCLA</abbr>), 2010.
         </div>
         <div class="item">
           <span class="article-title">M.S. Computer Science</span>.
           <!-- . -->
-          UCLA (<abbr>UCLA</abbr>), 2005.
+          University of California, Los Angeles (<abbr>UCLA</abbr>), 2005.
         </div>
         <div class="item">
           <span class="article-title">B.S. Computer Science</span>.
@@ -97,10 +97,10 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
           <span class="article-title">Research Intern</span>. <abbr>NASA</abbr> Ames Research Center, 2006.
         </div>
         <div class="item">
-          <span class="article-title">Research Assistant</span>. UCLA (<abbr>UCLA</abbr>), 2006–2010.
+          <span class="article-title">Research Assistant</span>. University of California, Los Angeles (<abbr>UCLA</abbr>), 2006–2010.
         </div>
         <div class="item">
-          <span class="article-title">Teaching Assistant</span>. UCLA (<abbr>UCLA</abbr>), 2003–2005.
+          <span class="article-title">Teaching Assistant</span>. University of California, Los Angeles (<abbr>UCLA</abbr>), 2003–2005.
         </div>
         <div class="item">
           <span class="article-title">Software Engineer Intern</span>. <abbr>IBM</abbr>, Endicott, 2001, 2002.
@@ -569,7 +569,7 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
           <span><strong>Eddie Kohler</strong> (Harvard)</span>
           <span><strong>Akash Lal</strong> (<abbr>MSR</abbr>)</span>
           <span><strong>Rupak Majumdar</strong> (<abbr>MPI-SWS</abbr>)</span>
-          <span><strong>Roman Manevich</strong> (UCLA)</span>
+          <span><strong>Roman Manevich</strong> (<abbr>UCLA</abbr>)</span>
           <span><strong>Kedar Namjoshi</strong> (Nokia Bell Labs)</span>
           <span><strong>Burcu Kulahcioglu Ozkan</strong> (Koç University)</span>
           <span><strong>Gennaro Parlato</strong> (Paris 7)</span>
