--- a/cv.html
+++ b/cv.html
@@ -35,7 +35,7 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
       <h2>About</h2>
       <div>
         
-<p>Michael received his doctorate in Computer Science from <abbr>UCLA</abbr> in 2010 and joined Bell Labs in 2016, following a postdoc fellowship at the Paris 7 awarded by La Fondation Sciences Mathématiques de Paris (<abbr>FSMP</abbr>), and a faculty researcher position at the <abbr>IMDEA</abbr> Software Institute. Prior to all that, Michael completed his undergraduate studies at Binghamton University (<abbr>SUNY</abbr>). He has been a teaching assistant for undergraduate courses at <abbr>UCLA</abbr> and Paris 7, and has held internships at MSR, <abbr>NASA</abbr> Ames Research Center, and <abbr>IBM</abbr>.</p>
+<p>Michael received his doctorate in Computer Science from <abbr>UCLA</abbr> in 2010 and joined Bell Labs in 2016, following a postdoc fellowship at the Paris 7 awarded by La Fondation Sciences Mathématiques de Paris (<abbr>FSMP</abbr>), and a faculty researcher position at the <abbr>IMDEA</abbr> Software Institute. Prior to all that, Michael completed his undergraduate studies at Binghamton University (<abbr>SUNY</abbr>). He has been a teaching assistant for undergraduate courses at <abbr>UCLA</abbr> and Paris 7, and has held internships at Microsoft Research, <abbr>NASA</abbr> Ames Research Center, and <abbr>IBM</abbr>.</p>
 <p>Michael’s research enables the construction of reliable software by developing the foundations for effective programming abstractions and informative program analysis tools. Integrating technological trends with knowledge from several research communities spanning automata theory, programming languages, and distributed systems, his contributions include establishing the theoretical limits of program analysis, devising tractable approximations for intractable analysis problems, and building effective analysis tools.</p>
 
       </div>
@@ -70,7 +70,7 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
     <section id="positions">
       <h2>Employment</h2>
         <div class="item">
-          <span class="article-title">Member of Technical Staff</span>. Nokia Bell Labs, Murray Hill, NJ, 2016–present.
+          <span class="article-title">Member of Technical Staff</span>. Nokia Bell Labs, Murray Hill, <abbr>NJ</abbr>, 2016–present.
         </div>
         <div class="item">
           <span class="article-title">Researcher</span>. <abbr>IMDEA</abbr> Software Institute, Madrid, 2013–2016.
@@ -82,16 +82,16 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
           <span class="article-title">Lecturer (<abbr>ATER</abbr>)</span>. Paris 7, 2012–2013.
         </div>
         <div class="item">
-          <span class="article-title">Visiting Researcher</span>. MSR, Bangalore, 2011.
+          <span class="article-title">Visiting Researcher</span>. Microsoft Research, Bangalore, 2011.
         </div>
         <div class="item">
-          <span class="article-title">Research Intern</span>. MSR, Redmond, 2010.
+          <span class="article-title">Research Intern</span>. Microsoft Research, Redmond, 2010.
         </div>
         <div class="item">
-          <span class="article-title">Research Intern</span>. MSR, Cambridge (<abbr>UK</abbr>), 2008.
+          <span class="article-title">Research Intern</span>. Microsoft Research, Cambridge (<abbr>UK</abbr>), 2008.
         </div>
         <div class="item">
-          <span class="article-title">Research Intern</span>. MSR, Redmond, 2007.
+          <span class="article-title">Research Intern</span>. Microsoft Research, Redmond, 2007.
         </div>
         <div class="item">
           <span class="article-title">Research Intern</span>. <abbr>NASA</abbr> Ames Research Center, 2006.
@@ -117,11 +117,11 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
           <span class="print-only"><a href="mailto:abou@liafa.univ-paris-diderot.fr">abou@liafa.univ-paris-diderot.fr</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://www.mpi-sws.org/~rupak/">Rupak Majumdar</a></span>. Scientific Director, MPI-SWS.
+          <span class="article-title"><a href="http://www.mpi-sws.org/~rupak/">Rupak Majumdar</a></span>. Scientific Director, <abbr>MPI-SWS</abbr>.
           <span class="print-only"><a href="mailto:rupak@mpi-sws.org">rupak@mpi-sws.org</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/qadeer/">Shaz Qadeer</a></span>. Principal Researcher, MSR.
+          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/qadeer/">Shaz Qadeer</a></span>. Principal Researcher, Microsoft Research.
           <span class="print-only"><a href="mailto:qadeer@microsoft.com">qadeer@microsoft.com</a></span>
         </div>
         <div class="item">
@@ -129,7 +129,7 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
           <span class="print-only"><a href="mailto:Dimitra.Giannakopoulou@nasa.gov">Dimitra.Giannakopoulou@nasa.gov</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/jjb/">Josh Berdine</a></span>. Researcher, MSR.
+          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/jjb/">Josh Berdine</a></span>. Researcher, Microsoft Research.
           <span class="print-only"><a href="mailto:jjb@microsoft.com">jjb@microsoft.com</a></span>
         </div>
     </section>
