--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / Nokia Bell Labs">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / &lt;abbr&gt;SRI&lt;/abbr&gt; International">
 
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon|IM+Fell+French+Canon+SC' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="css/screen.css">
@@ -17,16 +17,16 @@
       <div class="tagline">Researcher</div>
         <div class="row">
           <div class="column left">
-            <div class="item">Nokia Bell Labs<br>
-600 Mountain Ave., 2B-439<br>
-Murray Hill, <abbr>NJ</abbr> 07974<br>
+            <div class="item"><abbr>SRI</abbr> International<br>
+One Grand Central Place<br>
+60 E 42nd St<br>
+New York, <abbr>NY</abbr> 10165<br>
 <abbr>USA</abbr>
 </div>
           </div>
           <div class="column right">
             <a href="http://michael-emmi.github.io">http://michael-emmi.github.io</a><br>
             <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
-              <a href="tel:+1 (908) 743-4680">+1 (908) 743-4680</a> <br>
           </div>
         </div>
     </section>
@@ -70,7 +70,10 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
     <section id="positions">
       <h2>Employment</h2>
         <div class="item">
-          <span class="article-title">Member of Technical Staff</span>. Nokia Bell Labs, Murray Hill, <abbr>NJ</abbr>, 2016–present.
+          <span class="article-title">Sr. Computer Scientist</span>. <abbr>SRI</abbr> International, 2017–present.
+        </div>
+        <div class="item">
+          <span class="article-title">Member of Technical Staff</span>. Nokia Bell Labs, Murray Hill, <abbr>NJ</abbr>, 2016–2017.
         </div>
         <div class="item">
           <span class="article-title">Researcher</span>. <abbr>IMDEA</abbr> Software Institute, Madrid, 2013–2016.
