--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / Nokia Bell Labs">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / &lt;abbr&gt;SRI&lt;/abbr&gt; International">
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon|IM+Fell+French+Canon+SC' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="print" href="css/print.css">
@@ -16,7 +16,7 @@
 
         <section id="header">
           <h1 class="title">Michael Emmi</h1>
-          <div class="tagline">Researcher / Nokia Bell Labs</div>
+          <div class="tagline">Researcher / <abbr>SRI</abbr> International</div>
           <div class="item">
               <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
               <span class="tag"><a href="https://github.com/michael-emmi">@GitHub</a></span>
@@ -539,13 +539,13 @@
 
         <section id="contact">
           <h2>Contact</h2>
-            <div class="item">Nokia Bell Labs<br>
-600 Mountain Ave., 2B-439<br>
-Murray Hill, <abbr>NJ</abbr> 07974<br>
+            <div class="item"><abbr>SRI</abbr> International<br>
+One Grand Central Place<br>
+60 E 42nd St<br>
+New York, <abbr>NY</abbr> 10165<br>
 <abbr>USA</abbr>
 </div>
             <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
-              <a href="tel:+1 (908) 743-4680">+1 (908) 743-4680</a> <br>
         </section>
 
       </div>
