--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@ New York, <abbr>NY</abbr> 10165<br>
           </div>
           <div class="column right">
             <a href="http://michael-emmi.github.io">http://michael-emmi.github.io</a><br>
-            <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
+            <a href="mailto:michael.emmi@sri.com">michael.emmi@sri.com</a><br>
           </div>
         </div>
     </section>
@@ -35,7 +35,7 @@ New York, <abbr>NY</abbr> 10165<br>
       <h2>About</h2>
       <div>
         
-<p>Michael received his doctorate in Computer Science from <abbr>UCLA</abbr> in 2010 and joined Bell Labs in 2016, following a postdoc fellowship at the Paris 7 awarded by La Fondation Sciences Mathématiques de Paris (<abbr>FSMP</abbr>), and a faculty researcher position at the <abbr>IMDEA</abbr> Software Institute. Prior to all that, Michael completed his undergraduate studies at Binghamton University (<abbr>SUNY</abbr>). He has been a teaching assistant for undergraduate courses at <abbr>UCLA</abbr> and Paris 7, and has held internships at Microsoft Research, <abbr>NASA</abbr> Ames Research Center, and <abbr>IBM</abbr>.</p>
+<p>Michael received his doctorate in Computer Science from <abbr>UCLA</abbr> in 2010 and joined <abbr>SRI</abbr> International in 2017, following a postdoc fellowship at the Paris 7 awarded by La Fondation Sciences Mathématiques de Paris (<abbr>FSMP</abbr>), and faculty researcher positions at the <abbr>IMDEA</abbr> Software Institute and Nokia Bell Labs. Prior to all that, Michael completed his undergraduate studies at Binghamton University (<abbr>SUNY</abbr>). He has been a teaching assistant for undergraduate courses at <abbr>UCLA</abbr> and Paris 7, and has held internships at Microsoft Research, <abbr>NASA</abbr> Ames Research Center, and <abbr>IBM</abbr>.</p>
 <p>Michael’s research enables the construction of reliable software by developing the foundations for effective programming abstractions and informative program analysis tools. Integrating technological trends with knowledge from several research communities spanning automata theory, programming languages, and distributed systems, his contributions include establishing the theoretical limits of program analysis, devising tractable approximations for intractable analysis problems, and building effective analysis tools.</p>
 
       </div>
