Added recent papers.

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Proving Linearizability Using Forward Simulations</a>
+                    <a href="papers/conf-esop-BouajjaniEEOT17.pdf">Proving Linearizability Using Forward Simulations</a>
                 </span>
                 <span class="rhs"><abbr>CAV</abbr>&nbsp;’17</span>
               </div>
@@ -224,7 +224,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Verifying Robustness of Event-Driven Asynchronous Programs against Concurrency</a>
+                    <a href="papers/conf-cav-BouajjaniEEM17.pdf">Verifying Robustness of Event-Driven Asynchronous Programs against Concurrency</a>
                 </span>
                 <span class="rhs"><abbr>ESOP</abbr>&nbsp;’17</span>
               </div>
