--- a/publications.html
+++ b/publications.html
@@ -47,12 +47,12 @@
           <li class="item">
             Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Suha Orhun Mutluergil.
             <span class="article-title">
-                Proving Linearizability Using Forward Simulations.
+                <a href="https://doi.org/10.1007/978-3-319-63390-9">Proving Linearizability Using Forward Simulations</a>.
             </span>
             In <span class="article-volume">29th International Conference on Computer-Aided Verification</span>
-            (<abbr>CAV</abbr>&nbsp;’17), <abbr>LNCS</abbr>.
+            (<abbr>CAV</abbr>&nbsp;’17), <abbr>LNCS</abbr>, volume 10427, pages 542–563.
             Springer, 2017.
-            
+            <span class="screen-only">(<a href="papers/conf-esop-BouajjaniEEOT17.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
           <li class="item">
             Ahmed Bouajjani, Michael Emmi, Constantin Enea, Burcu Kulahcioglu Ozkan, and Serdar Tasiran.
@@ -62,7 +62,7 @@
             In <span class="article-volume">Proc. 26th European Symposium on Programming</span>
             (<abbr>ESOP</abbr>&nbsp;’17), <abbr>LNCS</abbr>, volume 10201, pages 170–200.
             Springer, 2017.
-            
+            <span class="screen-only">(<a href="papers/conf-cav-BouajjaniEEM17.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
           <li class="item">
             Jose Carlos Bacelar Almeida, Manuel Barbosa, Gilles Barthe, François Dupressoir, and Michael Emmi.
