--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -141,6 +141,11 @@ New York, <abbr>NY</abbr> 10165<br>
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="http://cavconference.org/2018/">30th International Conference on Computer Aided Verification</a></span>
+          (<abbr>CAV</abbr>&nbsp;’18).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://cs.nyu.edu/acsys/tapas2017/">8th Workshop on Tools for Automatic Program Analysis</a></span>
           (<abbr>TAPAS</abbr>&nbsp;’17).
         </div>
