Added new works.

--- a/index.html
+++ b/index.html
@@ -226,6 +226,22 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a>Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections</a>
+                </span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’18</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                    <a href="papers/journals-corr-EmmiE17.pdf">Exposing Non-Atomic Methods of Concurrent Objects</a>
+                </span>
+                <span class="rhs">arXiv&nbsp;’17</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a href="papers/conf-esop-BouajjaniEEOT17.pdf">Proving Linearizability Using Forward Simulations</a>
                 </span>
                 <span class="rhs"><abbr>CAV</abbr>&nbsp;’17</span>
