--- a/publications.html
+++ b/publications.html
@@ -45,6 +45,26 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Michael Emmi and Constantin Enea.
+            <span class="article-title">
+                Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections.
+            </span>
+            In <span class="article-volume">Proc. 45th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
+            (<abbr>POPL</abbr>&nbsp;’18).
+            <abbr>ACM</abbr>, 2018.
+            
+          </li>
+          <li class="item">
+            Michael Emmi and Constantin Enea.
+            <span class="article-title">
+                <a href="https://arxiv.org/abs/1706.09305">Exposing Non-Atomic Methods of Concurrent Objects</a>.
+            </span>
+            In <span class="article-volume"></span>
+            (arXiv&nbsp;’17), pages 1–22.
+            ArXiv e-prints, 2017.
+            <span class="screen-only">(<a href="papers/journals-corr-EmmiE17.pdf"><abbr>PDF</abbr></a>)</span>
+          </li>
+          <li class="item">
             Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Suha Orhun Mutluergil.
             <span class="article-title">
                 <a href="https://doi.org/10.1007/978-3-319-63390-9">Proving Linearizability Using Forward Simulations</a>.
