--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
+                  <a href="http://netys.net">
+                  <abbr>NETYS</abbr>&nbsp;’18
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs">
                   <a href="http://cavconference.org/2018/">
                   <abbr>CAV</abbr>&nbsp;’18
                   </a>
