Added SecDev activity.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -141,6 +141,11 @@ New York, <abbr>NY</abbr> 10165<br>
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://secdev.ieee.org/2018/">3rd IEEE Secure Development Conference</a></span>
+          (<abbr>SecDev</abbr>&nbsp;’18).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://netys.net">6th International Conference on Networked Systems</a></span>
           (<abbr>NETYS</abbr>&nbsp;’18).
         </div>
