--- a/cv.html
+++ b/cv.html
@@ -266,7 +266,7 @@ New York, <abbr>NY</abbr> 10165<br>
           <span class="article-title">
               <a href="https://doi.org/10.1007/978-3-319-63390-9">Proving Linearizability Using Forward Simulations</a>.
           </span>
-            In <span class="article-volume">29th International Conference on Computer-Aided Verification</span>
+            In <span class="article-volume">Proc. 29th International Conference on Computer-Aided Verification</span>
             (<abbr>CAV</abbr>&nbsp;’17), <abbr>LNCS</abbr>, volume 10427, pages 542–563.
             Springer, 2017.
           <span class="screen-only">(<a href="papers/conf-cav-BouajjaniEEM17.pdf"><abbr>PDF</abbr></a>)</span>
