--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections</a>
+                    <a href="papers/conf-popl-EmmiE18.pdf">Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections</a>
                 </span>
                 <span class="rhs"><abbr>POPL</abbr>&nbsp;’18</span>
               </div>
