--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
             In <span class="article-volume">Proc. 45th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
             (<abbr>POPL</abbr>&nbsp;’18).
             <abbr>ACM</abbr>, 2018.
-            
+            <span class="screen-only">(<a href="papers/conf-popl-EmmiE18.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
           <li class="item">
             Michael Emmi and Constantin Enea.
